--- a/resources/mainwindow.ui
+++ b/resources/mainwindow.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1282</width>
+    <width>1176</width>
     <height>600</height>
    </rect>
   </property>
@@ -62,10 +62,10 @@
      </property>
     </item>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QLineEdit" name="timeInput">
     <property name="geometry">
      <rect>
-      <x>80</x>
+      <x>40</x>
       <y>60</y>
       <width>113</width>
       <height>22</height>
@@ -75,11 +75,11 @@
      <string>20</string>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QPushButton" name="setTimeButton">
     <property name="geometry">
      <rect>
-      <x>90</x>
-      <y>100</y>
+      <x>160</x>
+      <y>60</y>
       <width>93</width>
       <height>28</height>
      </rect>
@@ -91,7 +91,7 @@
    <widget class="QRadioButton" name="radioButton">
     <property name="geometry">
      <rect>
-      <x>90</x>
+      <x>110</x>
       <y>270</y>
       <width>95</width>
       <height>20</height>
@@ -114,13 +114,26 @@
      <string>Create Playlist</string>
     </property>
    </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>30</x>
+      <y>100</y>
+      <width>241</width>
+      <height>20</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Note: Changing time will reset all graphs</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1282</width>
+     <width>1176</width>
      <height>26</height>
     </rect>
    </property>
