--- a/src/mainwindow.ui
+++ b/src/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>1176</width>
-    <height>600</height>
+    <width>848</width>
+    <height>480</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,20 +17,20 @@
    <widget class="QCustomPlot" name="plot" native="true">
     <property name="geometry">
      <rect>
-      <x>290</x>
-      <y>20</y>
-      <width>701</width>
-      <height>461</height>
+      <x>280</x>
+      <y>100</y>
+      <width>350</width>
+      <height>230</height>
      </rect>
     </property>
    </widget>
    <widget class="QSlider" name="slider">
     <property name="geometry">
      <rect>
-      <x>1060</x>
-      <y>20</y>
-      <width>51</width>
-      <height>451</height>
+      <x>725</x>
+      <y>100</y>
+      <width>50</width>
+      <height>230</height>
      </rect>
     </property>
     <property name="orientation">
@@ -40,10 +40,10 @@
    <widget class="QComboBox" name="comboBox">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>500</y>
-      <width>361</width>
-      <height>22</height>
+      <x>330</x>
+      <y>390</y>
+      <width>270</width>
+      <height>20</height>
      </rect>
     </property>
     <item>
@@ -65,8 +65,8 @@
    <widget class="QLineEdit" name="timeInput">
     <property name="geometry">
      <rect>
-      <x>40</x>
-      <y>60</y>
+      <x>20</x>
+      <y>110</y>
       <width>113</width>
       <height>22</height>
      </rect>
@@ -79,7 +79,7 @@
     <property name="geometry">
      <rect>
       <x>160</x>
-      <y>60</y>
+      <y>110</y>
       <width>93</width>
       <height>28</height>
      </rect>
@@ -91,8 +91,8 @@
    <widget class="QRadioButton" name="radioButton">
     <property name="geometry">
      <rect>
-      <x>110</x>
-      <y>270</y>
+      <x>230</x>
+      <y>390</y>
       <width>95</width>
       <height>20</height>
      </rect>
@@ -104,21 +104,21 @@
    <widget class="QPushButton" name="pushButton_2">
     <property name="geometry">
      <rect>
-      <x>1010</x>
-      <y>490</y>
-      <width>161</width>
-      <height>41</height>
+      <x>670</x>
+      <y>380</y>
+      <width>160</width>
+      <height>40</height>
      </rect>
     </property>
     <property name="text">
      <string>Create Playlist</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="timeNote">
     <property name="geometry">
      <rect>
-      <x>30</x>
-      <y>100</y>
+      <x>20</x>
+      <y>150</y>
       <width>241</width>
       <height>20</height>
      </rect>
@@ -133,8 +133,8 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>1176</width>
-     <height>26</height>
+     <width>848</width>
+     <height>20</height>
     </rect>
    </property>
   </widget>
