TN-71 added LineEdit for the playlist name

--- a/ui/createplaylistpage.ui
+++ b/ui/createplaylistpage.ui
@@ -127,6 +127,32 @@
      <string>Note: Changing time will reset all graphs</string>
     </property>
    </widget>
+   <widget class="QLineEdit" name="playlistName">
+    <property name="geometry">
+     <rect>
+      <x>20</x>
+      <y>190</y>
+      <width>113</width>
+      <height>21</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Rhythm Playlist</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label">
+    <property name="geometry">
+     <rect>
+      <x>174</x>
+      <y>190</y>
+      <width>65</width>
+      <height>16</height>
+     </rect>
+    </property>
+    <property name="text">
+     <string>Playlist Name</string>
+    </property>
+   </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
    <property name="geometry">
